--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
         padding: 15px;
         text-align: center;
         margin-bottom: 20px;
+        position: relative;
     }
     .logo {
         max-width: 200px;
@@ -528,11 +529,36 @@
     #addVariableBtn:hover {
         background: linear-gradient(135deg, #b0a070, #C2B280);
     }
+    .zoom-controls .btn {
+        background: linear-gradient(135deg, #C2B280, #b0a070);
+        border: none;
+        color: #000000;
+        font-size: 0.9em;
+        padding: 2px 8px;
+        width: 25px;
+        height: 25px;
+        border-radius: 50%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        transition: transform 0.2s ease, box-shadow 0.3s ease;
+    }
+
+    .zoom-controls .btn:hover {
+        transform: translateY(-2px);
+        box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+        background: linear-gradient(135deg, #b0a070, #C2B280);
+    }
 </style>
 <div class="logo-container">
     <a href="https://finance-brothers.pl">
         <img src="cropped-logo-FB-1.png" alt="Finance Brothers Logo" class="logo d-block mx-auto">
     </a>
+    <!-- Dodajemy przyciski zoom po prawej stronie -->
+    <div class="zoom-controls" style="position: absolute; right: 10px; top: 50%; transform: translateY(-50%); display: flex; gap: 5px;">
+        <button id="zoomInBtn" class="btn btn-sm" aria-label="Powiększ"> + </button>
+        <button id="zoomOutBtn" class="btn btn-sm" aria-label="Pomniejsz"> - </button>
+    </div>
 </div>
 
 
