--- a/index.html
+++ b/index.html
@@ -1629,7 +1629,7 @@
     function updateZoom() {
         const container = document.querySelector('.container');
         container.style.transform = `scale(${currentZoom})`;
-        container.style.transformOrigin = 'top left'; // Punkt odniesienia w lewym górnym rogu
+        container.style.transformOrigin = 'top center'; // Punkt odniesienia w lewym górnym rogu
         container.style.width = `${100 / currentZoom}%`; // Zachowanie szerokości strony
     }
 
