--- a/index.html
+++ b/index.html
@@ -715,7 +715,7 @@
                                 <tr>
                                     <th id="pierwszaKolumnaNaglowek">Rok</th>
                                     <th>Wartość inwestycji</th>
-                                    <th>Oproc.</th>
+                                    <th>Oprocentowanie</th>
                                     <th>Odsetki</th>
                                     <th>Suma odsetek</th>
                                     <th>Podatek</th>
