--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
     }
     .checkbox-label.header-checkbox {
         position: absolute;
-        top: 0;
+        top: -5px;
         right: 10px;
     }
     .form-section {
@@ -175,6 +175,7 @@
         max-width: 1000px;
         margin: 10px auto 0;
         line-height: 1.4;
+        padding-left: 1em;
     }
     .data-container {
         text-align: right;
