--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
     }
     .checkbox-label.header-checkbox {
         position: absolute;
-        top: -15px;
+        top: -20px;
         right: 10px;
     }
     .form-section {
@@ -361,7 +361,8 @@
         vertical-align: middle;
         font-weight: 500;
         border-bottom: 2px solid #ddd;
-        white-space: nowrap;
+        white-space: normal;
+        line-height: 1.2;
         overflow: hidden;
         text-overflow: ellipsis;
     }
@@ -740,24 +741,6 @@
         </div>
     </div>
 </div>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 <script>
     const elements = {
@@ -1221,7 +1204,7 @@
 
         if (pierwszaKolumnaNaglowek) pierwszaKolumnaNaglowek.textContent = ["OTS", "ROR", "DOR"].includes(typ) ? "Miesiąc" : "Rok";
         if (kolumnaStopaInflacja) {
-            kolumnaStopaInflacja.textContent = ["ROR", "DOR"].includes(typ) ? "Stopa Ref. NBP" : "Inflacja";
+            kolumnaStopaInflacja.textContent = ["ROR", "DOR"].includes(typ) ? "Stopa<br>Ref. NBP" : "Inflacja";
             kolumnaStopaInflacja.style.display = ["OTS", "TOS"].includes(typ) ? "none" : "table-cell";
         }
         if (zyskKolumnaNaglowek) zyskKolumnaNaglowek.textContent = state.isIkeIkzeMode ? "Zysk" : "Zysk netto";
