--- a/index.html
+++ b/index.html
@@ -588,7 +588,7 @@
                         <div class="form-group">
                             <label for="kwota" class="form-label">Kwota inwestycji</label>
                             <div class="input-group">
-                                <input type="number" class="form-control" id="kwota" min="100" max="5000000" step="100" value="10000">
+                                <input type="number" class="form-control" id="kwota" min="100" max="99000000" step="100" value="10000">
                                 <span class="input-group-text">zł</span>
                             </div>
                             <input type="range" class="form-range" id="kwotaRange" min="100" max="5000000" step="100" value="10000">
@@ -717,7 +717,7 @@
                                 <tr>
                                     <th id="pierwszaKolumnaNaglowek">Rok</th>
                                     <th>Wartość inwestycji</th>
-                                    <th>Oprocentowanie</th>
+                                    <th>Oproc.</th>
                                     <th>Odsetki</th>
                                     <th>Suma odsetek</th>
                                     <th>Podatek</th>
@@ -1166,7 +1166,13 @@
             return;
         }
 
-        const kwota = parseFloat(elements.kwota.value) || 0;
+        let kwota = parseFloat(elements.kwota.value) || 0;
+        const maxKwota = 10000000; // Maksymalna wartość 10 000 000 zł
+        if (kwota > maxKwota) {
+            kwota = maxKwota;
+            elements.kwota.value = maxKwota; // Aktualizujemy pole w formularzu
+            elements.kwotaRange.value = maxKwota; // Aktualizujemy suwak
+        }
         const typ = elements.typObligacji.value;
         const config = obligacjeConfig[typ];
         const miesiace = config.okres;
