--- a/index.html
+++ b/index.html
@@ -178,8 +178,10 @@
         padding-left: 5em;
     }
     .data-container {
-        text-align: right;
-        margin-top: 5px;
+        position: absolute;
+        top: -20px;
+        left: 10px;
+        text-align: left;
     }
     .data-info {
         font-size: 0.8em;
@@ -562,15 +564,6 @@
         <button id="zoomOutBtn" class="btn btn-sm" aria-label="Pomniejsz"> - </button>
     </div>
 </div>
-
-
-
-
-
-
-
-
-
 <div class="container">
     <div class="form-section" id="formSection">
         <div class="header-row">
@@ -588,10 +581,10 @@
                         <div class="form-group">
                             <label for="kwota" class="form-label">Kwota inwestycji</label>
                             <div class="input-group">
-                                <input type="number" class="form-control" id="kwota" min="100" max="99000000" step="100" value="10000">
+                                <input type="number" class="form-control" id="kwota" min="100" max="10000000" step="100" value="10000">
                                 <span class="input-group-text">zł</span>
                             </div>
-                            <input type="range" class="form-range" id="kwotaRange" min="100" max="99000000" step="100" value="10000">
+                            <input type="range" class="form-range" id="kwotaRange" min="100" max="10000000" step="100" value="10000">
                             <div class="sub-info" id="iloscObligacji">Ilość obligacji: 100</div>
                         </div>
                         <div class="form-group">
@@ -829,16 +822,6 @@
         "COI": "4-letnich (COI)", "EDO": "10-letnich (EDO)", "ROS": "6-letnich (ROS)", "ROD": "12-letnich (ROD)"
     };
 </script>
-
-
-
-
-
-
-
-
-
-
 <script>
     elements.dynamicRateRange.addEventListener("input", () => { 
         elements.dynamicRate.value = elements.dynamicRateRange.value; 
@@ -1133,12 +1116,6 @@
     updateDynamicRateField();
     updateIloscObligacji();
 </script>
-
-
-
-
-
-
 <script>
     if (typeof pdfMake !== "undefined" && typeof pdfMake.vfs !== "undefined") {
         pdfMake.fonts = {
@@ -1167,7 +1144,7 @@
         }
 
         let kwota = parseFloat(elements.kwota.value) || 0;
-        const maxKwota = 99000000; // Maksymalna wartość 10 000 000 zł
+        const maxKwota = 10000000; // Maksymalna wartość 10 000 000 zł
         if (kwota > maxKwota) {
             kwota = maxKwota;
             elements.kwota.value = maxKwota; // Aktualizujemy pole w formularzu
