--- a/index.html
+++ b/index.html
@@ -552,8 +552,8 @@
         background: linear-gradient(135deg, #b0a070, #C2B280);
     }
     body.dark-mode {
-        background-color: #2b2b2b;
-        color: #e0e0e0;
+    background-color: #2b2b2b;
+    color: #e0e0e0;
     }
 
     body.dark-mode .container {
@@ -561,6 +561,47 @@
         box-shadow: 0 0 15px rgba(0, 0, 0, 0.5);
     }
 
+    /* Dodane style */
+    body.dark-mode .logo-container {
+        background-color: #3a3a3a; /* Dopasowanie tła do trybu ciemnego */
+    }
+
+    body.dark-mode .data-info {
+        color: #D4C791; /* Jasniejszy odcień złota dla kontrastu */
+    }
+
+    body.dark-mode .data-date {
+        color: #e0e0e0;
+    }
+
+    body.dark-mode .chart-legend .legend-item {
+        color: #e0e0e0; /* Tekst legendy w trybie ciemnym */
+    }
+
+    body.dark-mode .summary-footer .highlight.yellow {
+        background-color: #17a2b8; /* Zachowujemy kolor, ale można dostosować */
+        color: #e0e0e0;
+    }
+
+    body.dark-mode .summary-footer .highlight.green {
+        background-color: #28a745;
+        color: #e0e0e0;
+    }
+    
+    /* Obsługa preferencji systemowych */
+    @media (prefers-color-scheme: dark) {
+        body:not(.light-mode) {
+            background-color: #2b2b2b;
+            color: #e0e0e0;
+        }
+        body:not(.light-mode) .container {
+            background: #3a3a3a;
+        }
+        body:not(.light-mode) .logo-container {
+            background-color: #3a3a3a;
+        }
+    }
+    
     body.dark-mode .form-section,
     body.dark-mode .result-section,
     body.dark-mode .harmonogram-container {
