--- a/index.html
+++ b/index.html
@@ -627,6 +627,9 @@
         background: #3a3a3a;
         color: #e0e0e0;
     }
+    body.dark-mode .harmonogram {
+        background-color: #404040; /* Nowe: Dopasowane tło */
+    }
 
     body.dark-mode .form-label,
     body.dark-mode .sub-info,
