--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
         max-width: 1000px;
         margin: 10px auto 0;
         line-height: 1.4;
-        padding-left: 5em;
+        padding-left: 10em;
     }
     .data-container {
         text-align: right;
@@ -642,7 +642,7 @@
     }
 
     body.dark-mode .harmonogram table {
-        background: #404040;
+        background: #1f1f1f;
     }
 
     body.dark-mode .harmonogram th {
@@ -651,9 +651,12 @@
     }
 
     body.dark-mode .harmonogram td {
-        background: #404040;
+        background: #1f1f1f;
         color: #e0e0e0;
         border-bottom: 1px solid #555;
+    }
+    body.dark-mode .btn-toggle {
+        color: #e0e0e0;
     }
 
     body.dark-mode .btn-primary,
@@ -1438,7 +1441,7 @@
                     data: [kwota, odsetkiCalkowite, podatekCalkowity],
                     backgroundColor: ['#28a745', '#007bff', '#dc3545'],
                     borderWidth: 1,
-                    hoverOffset: 20
+                    hoverOffset: 8
                 }]
             },
             options: {
